@@ -2,7 +2,9 @@ package model;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 /**
  * O sistema deverá permitir que jogadores se inscrevam, cadastrem itens de jogos (físicos ou virtuais),
@@ -22,19 +24,23 @@ public class Jogador {
 	private String nome;
 	private String email;
 	private String pin;
-	private List<Item> itens;
+	private Map<Integer, Item> itens;
 	private List<Proposta> propostas;
 
 	public Jogador(String nome, String email, String pin) {
 		this.nome = nome;
 		this.email = email;
 		setPin(pin);
-		this.itens = new ArrayList<>();
+		this.itens = new HashMap<>();
 		this.propostas = new ArrayList<>();
 	}
 
+	public boolean verificaPin(String pinDigitado) {
+		return pinDigitado.equals(this.pin);
+	}
+
 	/**
-	 * Verificação para o pin apenas ser criado com 6 digitos numéricos
+	 * Verificação para o pin apenas ser criado com 6 dígitos numéricos
 	 *
 	 * @param pin a ser verificado
 	 */
@@ -46,30 +52,52 @@ public class Jogador {
 	}
 
 	/**
-	 * Adicionar itens na lista de itens
+	 * Adiciona um <code>Item</code> no <em>map</em> de itens. Garante que a
+	 * instância de <code>Jogador</code> que chamou o método será
+	 * atribuída ao respectivo atributo do <code>Item</code>.
 	 *
-	 * @param item a ser adicionado
+	 * @param item O <code>Item</code> a ser adicionado.
 	 */
-	public boolean addItem(Item item) { // n contem esse parâmetro no diagrama
-		return itens.add(item);
+	public void addItem(Item item) {
+		item.setJogador(this);
+		itens.put(item.getId(), item);
 	}
 
 	/**
-	 * Remover item da lista de itens
+	 * Remove um <code>Item</code> do <em>map</em> de itens.
+	 * Define o atributo <code>Jogador</code> do <code>Item</code>
+	 * para <code>null</code>.
 	 *
-	 * @param item a ser removido
+	 * @param item O <code>Item</code> a ser removido.
 	 */
-	public boolean removeItem(Item item) { // n contem esse parâmetro no diagrama
-		return itens.remove(item);
+	public void removeItem(Item item) {
+		item.setJogador(null);
+		itens.remove(item.getId());
 	}
 
 	/**
-	 * Retorna a lista de itens
+	 * Retorna a lista de itens do jogador.
 	 *
-	 * @return a lista com todos os itens
+	 * @return Lista com todos os itens.
 	 */
-	public List<Item> getItems() {
-		return Collections.unmodifiableList(itens);
+	public List<Item> getItens() {
+		return List.copyOf(itens.values());
+	}
+
+	/**
+	 * Busca, na coleção do jogador, o <code>Item</code> com o ID
+	 * passado como argumento.
+	 *
+	 * @param id O ID do <code>Item</code> buscado.
+	 * @return O <code>Item</code> com ID correspondente, ou <code>null</code>
+	 * caso não seja encontrado ID correspondente na coleção.
+	 */
+	public Item getItem(int id) {
+		return itens.get(id);
+	}
+
+	public void addProposta(Proposta p) {
+		propostas.add(p);
 	}
 
 	public List<Proposta> getPropostasRecebidas() {
@@ -79,7 +107,7 @@ public class Jogador {
 				recebidas.add(p);
 			}
 		}
-		return Collections.unmodifiableList(recebidas) ;
+		return Collections.unmodifiableList(recebidas);
 	}
 
 	public List<Proposta> getPropostasRealizadas() {
@@ -94,6 +122,10 @@ public class Jogador {
 
 	public String getEmail() {
 		return email;
+	}
+
+	public String getNome() {
+		return nome;
 	}
 
 	/**
